# microban

./: CITATION.cff  LICENSE  Makefile  README.md  TODO.txt  plot_head_log.py  plot_walk_log.py  pyproject.toml
STEP/: foot.step
STL/: foot.stl
cad/: LICENSE
cad/step/: board_spacer.step
cad/stl/: board_spacer.stl
docs/: assembly.md  bom.md  deployment.md  gamepad.md  logs.md  printing.md  usage.md
docs/dev/: clone_sd.md  setup_rasp.md
model/mjcf/: robot.xml  scene.xml
model/mjcf/assets/: ankle_dbl_block__configuration_right.part  ankle_dbl_block__configuration_right.scad  ankle_dbl_block__configuration_right.stl  arm_bearing_support__configuration_right.part  arm_bearing_support__configuration_right.stl  battery.part  battery.stl  bts2_m2_6x8.part  bts2_m2_6x8.stl  chest__configuration_right.part  chest__configuration_right.stl  dc15_a01_horn_idle2_dummy.part  humerus.part  (+47 more)
model/urdf/: robot.urdf
src/: battery.py  constants.py  controller.py  gamepad_daemon.py  gyro.py  imu.py  imu_reader.py  main.py  observer.py  robot_controller.py  scheduler.py  stop.py  voltage.py
src/agents/: walk.onnx  walk_alt_pose.onnx  walk_initial.onnx  walk_lean_forward.onnx  walk_vin_drop.onnx
src/debug/: plot_head_log.py  plot_squat_log.py  plot_walk_log.py
src/input/: __init__.py  gamepad_input.py  input_source.py  keyboard_input.py
src/moves/: move.py  rotate_head.py  squat.py  walk.py
src/sim/: __init__.py  mujoco_controller.py  mujoco_input.py  placo_controller.py  sim_main.py  viewer_main.py
systemd/: install-gamepad-daemon.sh  microban-gamepad.service
(+1 files in other folders)
